chore(all): unify rqlite spelling

--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition = "2021"
 publish = true
 license = "MIT"
-description = "Async Rqlite client for Rust"
+description = "Async rqlite client for Rust"
 repository = "https://github.com/tomvoet/rqlite-rs"
 readme = "../README.md"
 keywords = ["rqlite", "database", "async"]
