feat(rqlite-rs): added batch execution functionality

--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rqlite-rs"
-version = "0.2.3"
+version = "0.3.0"
 edition = "2021"
 publish = true
 license = "MIT"
@@ -10,6 +10,7 @@ readme = "../README.md"
 keywords = ["rqlite", "database", "async"]
 categories = ["database", "asynchronous"]
 authors = ["Tom Voet <tomvoet@pm.me>"]
+documentation = "https://docs.rs/rqlite-rs/"
 
 [features]
 default = []
@@ -17,8 +18,8 @@ macros = ["rqlite-rs-macros"]
 
 
 [dependencies]
-rqlite-rs-macros = { version = "0.2.1", path = "../rqlite-rs-macros", optional = true }
-rqlite-rs-core = { version = "0.2.2", path = "../rqlite-rs-core" }
+rqlite-rs-macros = { version = "0.2.2", path = "../rqlite-rs-macros", optional = true }
+rqlite-rs-core = { version = "0.2.3", path = "../rqlite-rs-core" }
 anyhow = "1.0.80"
 reqwest = { version = "0.11.25" }
 serde = { version = "1.0.197", features = ["derive"] }
