--- a/rqlite-rs-core/Cargo.toml
+++ b/rqlite-rs-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rqlite-rs-core"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 publish = true
 license = "MIT"
@@ -10,6 +10,7 @@ readme = "../README.md"
 keywords = ["rqlite", "database", "async"]
 categories = ["database", "asynchronous"]
 authors = ["Tom Voet <tomvoet@pm.me>"]
+documentation = "https://docs.rs/rqlite-rs/"
 
 [dependencies]
 anyhow = "1.0.81"
