--- a/rqlite-rs-macros/Cargo.toml
+++ b/rqlite-rs-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rqlite-rs-macros"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 publish = true
 license = "MIT"
@@ -10,11 +10,12 @@ readme = "../README.md"
 keywords = ["rqlite", "database", "async"]
 categories = ["database", "asynchronous"]
 authors = ["Tom Voet <tomvoet@pm.me>"]
+documentation = "https://docs.rs/rqlite-rs/"
 
 [lib]
 proc-macro = true
 
 [dependencies]
 quote = "1.0.35"
-rqlite-rs-core = { version = "0.2.2", path = "../rqlite-rs-core" }
+rqlite-rs-core = { version = "0.2.3", path = "../rqlite-rs-core" }
 syn = { version = "2.0.52", features = ["full", "parsing"] }
