--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -13,14 +13,17 @@ authors = ["Tom Voet <tomvoet@pm.me>"]
 documentation = "https://docs.rs/rqlite-rs/"
 
 [features]
-default = []
-macros = ["rqlite-rs-macros"]
+default = ["macros", "native-tls"]
 
+native-tls = ["reqwest/native-tls"]
+rustls-tls = ["reqwest/rustls-tls"]
+
+macros = ["rqlite-rs-macros"]
 
 [dependencies]
 rqlite-rs-macros = { version = "0.2.3", path = "../rqlite-rs-macros", optional = true }
 rqlite-rs-core = { version = "0.2.4", path = "../rqlite-rs-core" }
 anyhow = "1.0.80"
-reqwest = { version = "0.11.25" }
+reqwest = { version = "0.12.0", default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
