--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 members = ["examples", "rqlite-rs", "rqlite-rs-macros", "rqlite-rs-core"]
 resolver = "2"
+
+[workspace.dependencies]
+anyhow = "1.0.81"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
