--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rqlite-rs"
-version = "0.3.6"
+version = "0.3.7"
 edition = "2021"
 publish = true
 license = "MIT"
@@ -23,7 +23,7 @@ macros = ["rqlite-rs-macros"]
 [dependencies]
 rqlite-rs-macros = { version = "0.2.3", path = "../rqlite-rs-macros", optional = true }
 rqlite-rs-core = { version = "0.2.4", path = "../rqlite-rs-core" }
-anyhow = "1.0.80"
-reqwest = { version = "0.12.0", default-features = false }
-serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
+reqwest = { version = "0.12.2", default-features = false }
+anyhow.workspace = true
+serde.workspace = true
+serde_json.workspace = true
