--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ resolver = "2"
 anyhow = "1.0.81"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+thiserror = "1.0.58"
