--- a/rqlite-rs-core/Cargo.toml
+++ b/rqlite-rs-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rqlite-rs-core"
-version = "0.2.5"
+version = "0.2.6"
 edition = "2021"
 publish = true
 license = "MIT"
@@ -13,6 +13,6 @@ authors = ["Tom Voet <tomvoet@pm.me>"]
 documentation = "https://docs.rs/rqlite-rs/"
 
 [dependencies]
-anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+thiserror.workspace = true
