fix(ci): updated branch names

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,26 +3,26 @@ name: Checks
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
-  #clippy:
-  #  name: Clippy
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - uses: actions-rs/toolchain@v1
-  #      with:
-  #        toolchain: stable
-  #        components: clippy
-  #        override: true
-  #    - uses: actions-rs/clippy-check@v1
-  #      with:
-  #        token: ${{ secrets.GITHUB_TOKEN }}
-  #        args: --all-features
+  clippy:
+    name: Clippy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy
+          override: true
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
   
   fmt:
     name: Rust Fmt
