--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -3,10 +3,10 @@ name: CI (Linux)
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build_and_test:
