--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.0.0"
 [dev-dependencies]
 rqlite-rs = { version = "0.3.4", path = "../rqlite-rs" }
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
-anyhow = "=1.0.81"
+anyhow = "1.0.81"
 
 [[example]]
 name = "list-tables"
