--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rqlite-rs"
-version = "0.3.8"
+version = "0.3.9"
 edition = "2021"
 publish = true
 license = "MIT"
@@ -24,6 +24,6 @@ macros = ["rqlite-rs-macros"]
 rqlite-rs-macros = { version = "0.2.5", path = "../rqlite-rs-macros", optional = true }
 rqlite-rs-core = { version = "0.2.6", path = "../rqlite-rs-core" }
 reqwest = { version = "0.12.2", default-features = false }
-anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+thiserror.workspace = true
