--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -24,6 +24,7 @@ macros = ["rqlite-rs-macros"]
 rqlite-rs-macros = { version = "0.2.5", path = "../rqlite-rs-macros", optional = true }
 rqlite-rs-core = { version = "0.2.6", path = "../rqlite-rs-core" }
 reqwest = { version = "0.12.2", default-features = false }
+base64 = "0.22.0"
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
