--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -24,3 +24,7 @@ path = "batch.rs"
 [[example]]
 name = "fallback-node"
 path = "fallback-node.rs"
+
+[[example]]
+name = "https"
+path = "https.rs"
