--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 members = ["examples", "rqlite-rs", "rqlite-rs-macros", "rqlite-rs-core"]
 resolver = "2"
 
+[workspace.package]
+license = "MIT OR Apache-2.0"
+authors = ["Tom Voet <tomvoet@pm.me>"]
+edition = "2021"
+keywords = ["rqlite", "database", "async"]
+categories = ["database", "asynchronous"]
+repository = "https://github.com/tomvoet/rqlite-rs"
+
 [workspace.dependencies]
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.118"
-thiserror = "1.0.61"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+thiserror = "1.0.63"
