--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,7 +5,7 @@ publish = false
 version = "0.0.0"
 
 [dev-dependencies]
-rqlite-rs = { version = "0.3.20", path = "../rqlite-rs" }
+rqlite-rs = { version = "0.4.0", path = "../rqlite-rs" }
 tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
 anyhow = "1.0.90"
 
@@ -38,4 +38,9 @@ doc-scrape-examples = true
 [[example]]
 name = "https"
 path = "https.rs"
+doc-scrape-examples = true
+
+[[example]]
+name = "option"
+path = "option.rs"
 doc-scrape-examples = true
