--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ rust-version = "1.71.1"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.131"
 thiserror = "1.0.64"
+base64 = "0.22.1"
