chore: adjusted blob implementation - removed base64 encoding for inserts and made base64 for retrieval optional

--- a/rqlite-rs-core/Cargo.toml
+++ b/rqlite-rs-core/Cargo.toml
@@ -14,7 +14,7 @@ repository.workspace = true
 rust-version.workspace = true
 
 [features]
-blob = ["base64"]
+fast-blob = ["base64"]
 
 [dependencies]
 serde.workspace = true
