--- a/rqlite-rs-macros/Cargo.toml
+++ b/rqlite-rs-macros/Cargo.toml
@@ -17,7 +17,7 @@ rust-version.workspace = true
 proc-macro = true
 
 [features]
-blob = ["rqlite-rs-core/blob"]
+fast-blob = ["rqlite-rs-core/fast-blob"]
 
 [dependencies]
 quote = "1.0.37"
