--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -20,7 +20,7 @@ native-tls = ["reqwest/native-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 
 macros = ["rqlite-rs-macros"]
-blob = ["rqlite-rs-core/blob", "rqlite-rs-macros/blob"]
+fast-blob = ["rqlite-rs-core/fast-blob", "rqlite-rs-macros/fast-blob"]
 
 [dependencies]
 rqlite-rs-macros = { version = "0.2.11", path = "../rqlite-rs-macros", optional = true }
