feat: added blob support (#21)
* feat: added basic support for blobs

* test(rqlite-rs): fixed blob arg tests

* test(rqlite-rs-core): added unit test for base64 blob decoder

* docs: added feature documentation

* chore: adjusted blob implementation - removed base64 encoding for inserts and made base64 for retrieval optional

* test(rqlite-rs): added tests for new request query param

* test(rqlite-rs): fixed unit tests for fast-blob feature

* test(rqlite-rs): fix test query param off by one error

--- a/rqlite-rs-core/Cargo.toml
+++ b/rqlite-rs-core/Cargo.toml
@@ -13,7 +13,11 @@ categories.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 
+[features]
+fast-blob = ["base64"]
+
 [dependencies]
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+base64 = { workspace = true, optional = true }
