--- a/rqlite-rs-macros/Cargo.toml
+++ b/rqlite-rs-macros/Cargo.toml
@@ -16,6 +16,9 @@ rust-version.workspace = true
 [lib]
 proc-macro = true
 
+[features]
+fast-blob = ["rqlite-rs-core/fast-blob"]
+
 [dependencies]
 quote = "1.0.37"
 rqlite-rs-core = { version = "0.2.12", path = "../rqlite-rs-core" }
