--- a/rqlite-rs/Cargo.toml
+++ b/rqlite-rs/Cargo.toml
@@ -21,11 +21,13 @@ rustls-tls = ["reqwest/rustls-tls"]
 
 macros = ["rqlite-rs-macros"]
 fast-blob = ["rqlite-rs-core/fast-blob", "rqlite-rs-macros/fast-blob"]
+random-fallback = ["nanorand"]
 
 [dependencies]
 rqlite-rs-macros = { version = "0.3.0", path = "../rqlite-rs-macros", optional = true }
 rqlite-rs-core = { version = "0.3.0", path = "../rqlite-rs-core" }
 reqwest = { version = "0.12.8", default-features = false }
+nanorand = { version = "0.7.0", optional = true }
 base64.workspace = true
 serde.workspace = true
 serde_json.workspace = true
